# loginsrv

./: .cproject  .gitignore  .gitmodules  CMakeLists.txt  deb_build
conf/: loginserver.conf  loginserver.dist.conf  master.conf  printemail  security.conf
debian/: .gitignore  adveri-loginserver.postinst  adveri-loginserver.service  changelog  conffiles  control  copyright  loginserver.postinst  loginserver.service  rules
inst/opt/loginserver/conf/: security.conf
src/main/: CMakeLists.txt  emailcodes.cpp  emailcodes.h  invationsvc.cpp  invationsvc.h  loginApple.cpp  loginApple.h  loginFacebook.cpp  loginFacebook.h  loginGoogle.cpp  loginGoogle.h  loginTrezor.cpp  loginTrezor.h  main.cpp  rpcInterfaceOld.cpp  rpcInterfaceOld.h  rpcinterface.cpp  rpcinterface.h  sendmail.cpp  sendmail.h
www/: index.html  login.css  login.html  style.css
www/conf/: .gitignore  login.template.conf
www/libs/: index.js  login.js  trezor-connect.js
